[metadata]
name = ApiCryptoBot
version = 0.1
author = Andrew Zaycev
author_email = bonyxyq@gmail.com
url = https://github.com/andrewzaycew/cryptopayclient
description = API for CryptoBot 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    
project_urls = 
    Bug Tracker = https://github.com/andrewzaycew/cryptopayclient/issues

[options]
pakage_dir =
    = ApiCryptoBot
packages = find: 
python_requires = >= 3.6
[options.packages.find]
where = ApiCryptoBot
